--- a/demos/selector-tokenizer.html
+++ b/demos/selector-tokenizer.html
@@ -13,9 +13,9 @@
       <pre id="output"></pre>
     </main>
     <script type="module">
-      import { initPreview } from "./client/view.ts";
+      import { initPreview, renderNestedToken } from "./client/view.ts";
       import { tokenizeSelector } from "../src/parsers/selector-tokenizer.ts";
-      initPreview(input, output, tokenizeSelector);
+      initPreview(input, output, tokenizeSelector, renderNestedToken);
     </script>
   </body>
 </html>
