chore: change package names to @pokey org

--- a/demos/css-selector-parser.html
+++ b/demos/css-selector-parser.html
@@ -9,7 +9,7 @@
     <script type="importmap">
       {
         "imports": {
-          "toky": "/packages/toky/src/index.ts"
+          "@tokey/core": "/packages/core/src/index.ts"
         }
       }
     </script>
