--- a/demos/import-tokenizer.html
+++ b/demos/import-tokenizer.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/style.css" />
+    <script type="importmap">
+      {
+        "imports": {
+          "@tokey/core": "/packages/core/src/index.ts"
+        }
+      }
+    </script>
   </head>
   <body>
     <main>
@@ -23,8 +30,8 @@ import "7";
     </main>
     <script type="module">
       import { initPreview } from './client/view.ts';
-      import { tokenizeImports } from '../packages/core/src/parsers/import-tokenizer.ts';
-      initPreview(input, output, tokenizeImports);
+      import { parseImports } from '../packages/imports-parser/src/imports-parser.ts';
+      initPreview(input, output, parseImports);
     </script>
   </body>
 </html>
