chore(deps): latest stable; reformat all - remove package-specific prettier configs and instead let the root one take over - regenerate lock file

--- a/demos/tokey-tokenizer.html
+++ b/demos/tokey-tokenizer.html
@@ -34,7 +34,7 @@
         return false;
       }
       function isStringDelimiter(ch) {
-        return ch === '"' || ch === "'" || ch === "`"
+        return ch === '"' || ch === "'" || ch === '`';
       }
       function shouldAddToken() {
         return true;
