--- a/demos/separated-shallow-list.html
+++ b/demos/separated-shallow-list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -47,7 +47,7 @@
       initPreview(input, output, (value) =>
         getListItems(value, (char) => {
           return JSON.parse(`"${seps.value}"`).includes(char);
-        })
+        }),
       );
     </script>
   </body>
